implemented game endpoints
